--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,20 @@
+*{
+  margin:0;
+  paddinng:0;
+  box-sizing: border-box ;
+}
+
+
+
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
+
+.App-content {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -28,11 +29,6 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
+
